fix(docs): solve documentation models reference
